# poc-arrow

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yaml
arrow-c/: .makim.yaml  CMakeLists.txt  Makefile  meson.build
arrow-c/cmake/: FindGLIB.cmake
arrow-c/notebooks/: scalars.ipynb
arrow-c/src/: examples-arrays.c  examples-arrays.h  examples-scalars.c  examples-scalars.h  examples_scalars.c  examples_values.c  examples_values.h  main.c  pocarrow.c  utils.c
arrow-cpp/: .makim.yaml  CMakeLists.txt  Makefile  meson.build
arrow-cpp/notebooks/: arrow-c-glib.ipynb  arrow-cpp-cookbook.ipynb  arrow-utils.ipynb
arrow-cpp/src/: examples-scalars.cpp  examples-scalars.h  examples-simple.cpp  examples-simple.h  main.cpp  utils.h
conda/: dev.yaml
scripts/: optclean.sh
